--- a/promise-blocking/src/index.html
+++ b/promise-blocking/src/index.html
@@ -5,11 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    .app {
+      display: flex;
+    }
+
+    .app div {
+      width: 50%;
+    }
+  </style>
 </head>
 <body>
-  <ul>
-    <li><a href="blocking.html">Blocking</a></li>
-    <li><a href="non-blocking.html">Non Blocking</a></li>
-  </ul>
+
+  <div class="app">
+      <div>
+        <div id="root-1">{ placeholder }</div><br>
+        <button onclick="runBlocking('#root-1')">Run</button>
+      </div>
+
+      <div>
+          <div id="root-2">{ placeholder }</div><br>
+          <button onclick="runNonBlocking('#root-2')">Run</button>
+      </div>
+  </div>
+
+  <script src="wait.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
